SERVER-27996 Invalidate stale system.namespaces record IDs